# Billeterie2

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt
accounts/: admin.py  decorators.py  forms.py  middleware.py  models.py  urls_verifiers.py  views.py
accounts/migrations/: 0002_customuser_max_qr_codes_customuser_owner_and_more.py  0003_alter_customuser_role.py  0004_alter_customuser_max_qr_codes.py  0005_remove_customuser_max_qr_codes_and_more.py
django_project/: settings.py  urls.py
pages/: urls.py  views.py
qrgenerator/: decorators.py  models.py  qrcode_service.py  security.py  tests.py  urls.py  views.py
qrgenerator/migrations/: 0001_initial.py  0002_code_secure_index.py  0003_alter_code_options_alter_codebatch_options.py
static/css/: about.css  base.css  footer.css  help.css  home.css  login.css  navbar.css
templates/: 403_csrf.html  404.html  500.html  base.html
templates/account/: login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  signup.html  verifier_confirm_delete.html  verifier_create.html  verifier_list.html
templates/pages/: about.html  help.html  home.html
templates/qrgenerator/: batch_create.html  batch_detail.html  batch_list.html  code_detail.html  dashboard.html  verify_code.html
